--- a/search/templates/search/post_report.html
+++ b/search/templates/search/post_report.html
@@ -3,6 +3,11 @@
 
 {% block content %}
     <br>
+    {% if not user.is_authenticated %}
+        <div class="alert alert-danger">
+        <strong>Please log in  or sign up to post reports.</strong>
+        </div>
+    {% endif %}
     {% if form.errors %}
         {% for field in form %}
             {% for error in field.errors %}
