Added form method and enctype to post_report.html

--- a/search/templates/search/post_report.html
+++ b/search/templates/search/post_report.html
@@ -23,7 +23,7 @@
         {% endfor %}
     {% endif %}
     <div class="container">
-        <form role="form">
+        <form role="form" method="post" enctype="multipart/form-data">
             <legend>Post a new report</legend>
             {% csrf_token %}
             {{ form|bootstrap }}
