Fixed query spaces, dropdown static on basic.

--- a/search/templates/search/search_results.html
+++ b/search/templates/search/search_results.html
@@ -4,11 +4,7 @@
     <br>
 
     <p hidden>
-        {% block query %}
-            {% if query %}
-                {{query}}
-            {% endif %}
-        {% endblock %}
+        {% block query %}{% if query %}{{query}}{% endif %}{% endblock %}
         {% block category_block %}
             {% for type in categories %}
                 <option value="{{ type }}" {% if type.type == cat %}selected{% endif %}>{{ type }}</option>
