--- a/search/templates/search/andrewprofile.html
+++ b/search/templates/search/andrewprofile.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <title>About page</title>
@@ -30,7 +31,7 @@
 
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="andrew.jpg" style="width:50%" alt="Avatar">
+          <img src="{% static "search/andrew.jpg" %}" style="width:50%" alt="Avatar">
           <div class="w3-container w3-text-grey; text-align: center;">
             <h3>Andrew Hutzel</h3>
           </div>
