--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -65,7 +65,7 @@
                 <a class="nav-link" href="{% url 'search:index' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="{% url 'search:about' %}">About</a>
             </li><li class="nav-item">
                 <a class="nav-link" href="{% url 'search:postnew' %}">Post Report</a>
             </li>
