--- a/search/templates/search/jaimes.html
+++ b/search/templates/search/jaimes.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <title>About page | Jaime Subroto</title>
@@ -31,7 +32,7 @@
       <div class="w3-white w3-text-grey w3-card-4">
         <br>
         <div class="w3-display-container">
-          <img src="jaimes.jpg" style="border-style: solid;width:50%;padding:1px;border-width:5px" alt="Avatar">
+          <img src="{% static "search/jaimes.jpg" %}" style="border-style: solid;width:50%;padding:1px;border-width:5px" alt="Avatar">
           <div class="w3-container w3-text-grey; text-align: center;">
             <h3>Jaimes Subroto</h3>
           </div>
