Added login notification, cancel button to post

--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -95,6 +95,9 @@
 
         <ul class="nav navbar-nav ml-auto">
             {% if user.is_authenticated %}
+                <span class="navbar-text">
+                    You are logged in as: {{ user.username }}
+                </span>
                 <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
             {% else %}
                 <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
