--- a/search/templates/search/signup.html
+++ b/search/templates/search/signup.html
@@ -26,7 +26,7 @@
                 <label class="checkbox-inline"><input type="checkbox" required="required"> I accept the
                     <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
                 <br>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-success">Submit</button>
                 <a href="{% url 'search:index' %}" class="btn btn-outline-secondary" role="button" aria-pressed="true">Cancel</a>
             </div>
         </form>
