--- a/search/templates/search/post_report.html
+++ b/search/templates/search/post_report.html
@@ -29,6 +29,7 @@
             {{ form|bootstrap }}
             <div class="form-group">
                 <button type="submit" class="btn btn-success">Submit</button>
+                <a href="{% url 'search:index' %}" class="btn btn-outline-secondary" role="button" aria-pressed="true">Cancel</a>
             </div>
         </form>
     </div>
