--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,7 +1,10 @@
 {% extends "search/base_generic.html" %}
 
 {% block content %}
-<p>Logged out!</p>  
+    <div class="container">
+        <p>Logged out!</p>
 
-<a href="{% url 'login'%}">Click here to login again.</a>
+        <a href="{% url 'login'%}">Click here to login again.</a>
+    </div>
+
 {% endblock %}
