--- a/search/templates/search/report_detail.html
+++ b/search/templates/search/report_detail.html
@@ -24,12 +24,11 @@
                 </ul>
                 {% if request.user|has_group:"City Manager" %}
                     <ul>
-                        <a href="{% url 'search:report_update' report.pk %}">Update</a>
+                        <a href="{% url 'search:report_update' report.pk %}" class="btn btn-outline-secondary" role="button" aria-pressed="true">Update</a>
                         <form action="{% url 'search:report_delete' report.id %}" method="post" style="display: inline">
                             {% csrf_token %}
                             <input type = "hidden" name="report_id" value="{{ report.id }}"/>
-                            <button type="submit" class="btn btn-default btn-sm">
-                                <span class="glyphicon glyphicon-trash"></span>
+                            <button type="submit" class="btn btn-outline-secondary" role="button" aria-pressed="true">Delete
                             </button>
                         </form>
 
@@ -50,12 +49,5 @@
         <p style="padding-bottom: 50px">{{ report.description }}</p>
 
     </div>
-    <!-- /.container -->
-
-    <footer class="py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
-        </div>
-    </footer>
 
 {% endblock %}
