--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -16,7 +16,7 @@
             {% csrf_token %}
             {{ form|bootstrap }}
             <div class="form-group">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-success">Submit</button>
             </div>
         </form>
     </div>
