Removed extra hr from search_results

--- a/search/templates/search/search_results.html
+++ b/search/templates/search/search_results.html
@@ -24,7 +24,7 @@
             <p>Please enter something to search. Meanwhile, {{msg}}{{ reports|pluralize }}.</p>
         {% else %}
             <p>No park{{ reports|pluralize }} matched your {{err}}, {% if allmsg %}{{ allmsg }}{% else %}
-              here are report{{ reports|pluralize }} that share the {{cat|lower}} category.</p><hr>{% endif %}
+              here are report{{ reports|pluralize }} that share the {{cat|lower}} category.</p>{% endif %}
         {% endif %}
     {% endif %}
     <hr>
